@startuml data_tag_manager

entity "item" {
    + id [PK]
    ==
    name
    description
}

entity "meta_key" {
    + id [PK]
    ==
    name
}

entity "tag" {
    + id [PK]
    ==
    # parent_tag_id [FK(tag.id)]
    level
    name
    color
}

entity "item_meta" {
    + id [PK]
    ==
    # item_id [FK(item.id)]
    # meta_key_id [FK(meta.id)]
    value
}

entity "item_tag" {
    + id [PK]
    ==
    # item_id [FK(item.id)]
    # tag_id [FK(tag.id)]
}

entity "item_template" {
    + id [PK]
    ==
    name
}

entity "item_template_meta_key" {
    + id [PK]
    ==
    # item_template_id
    # meta_key_id
}

item --o{ item_tag
item --o{ item_meta
item_tag ||--|| tag
item_meta ||--|| meta_key
item_template --o{ item_template_meta_key
item_template_meta_key  ||--|| meta_key

' 案2
' entity "item_1" {
'     + id [PK]
'     ==
'     # item_template_id 
' }
' entity "item_template" {
'     + id [PK]
'     ==
'     name
' }
' entity "item_template_meta_key" {
'     + id [PK]
'     ==
'     # item_template_id
'     # meta_key_id

' }
' entity "meta_key_2" {
'     + id [PK]
'     ==
'     name
' }

' item_1 --o{ item_template
' item_template --o{ item_template_meta_key
' item_template_meta_key --o{ meta_key_2





@enduml
